# minijam80

./: .gitignore  Cargo.toml
.github/workflows/: flow.yaml
src/: assets.rs  editor.rs  game_state.rs  main.rs  model_renderer.rs
src/level/: entity.rs  id.rs  mod.rs  pathfind.rs
src/model/: creature.rs  entity.rs  level.rs  mod.rs  tile.rs
src/model/level/: mod.rs  pathfind.rs
src/renderer/: mod.rs  program.glsl
static/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
