[package]
name = "minijam80"
version = "0.1.0"
authors = ["Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = "0.8.0-alpha"
serde = "1"
batbox = "0.6.0"
enum-iterator = "0.6"